[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Battle_system.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Note_sketch.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 20 )

[node name="Battle_system" type="Node2D"]
position = Vector2( 0, 64 )
script = ExtResource( 1 )

[node name="Key" type="Area2D" parent="." groups=["key"]]
position = Vector2( 204, 0 )

[node name="ColorRect" type="ColorRect" parent="Key"]
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Key"]
shape = SubResource( 1 )

[node name="NoteSketch" type="Sprite" parent="Key"]
rotation = -1.5708
texture = ExtResource( 2 )

[node name="Key2" type="Area2D" parent="." groups=["key"]]
position = Vector2( 408, 0 )

[node name="ColorRect" type="ColorRect" parent="Key2"]
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Key2"]
shape = SubResource( 1 )

[node name="NoteSketch" type="Sprite" parent="Key2"]
rotation = 3.14159
texture = ExtResource( 2 )

[node name="Key3" type="Area2D" parent="." groups=["key"]]
position = Vector2( 612, 0 )

[node name="ColorRect" type="ColorRect" parent="Key3"]
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Key3"]
shape = SubResource( 1 )

[node name="NoteSketch" type="Sprite" parent="Key3"]
rotation = -3.01992e-07
texture = ExtResource( 2 )

[node name="Key4" type="Area2D" parent="." groups=["key"]]
position = Vector2( 816, 0 )

[node name="ColorRect" type="ColorRect" parent="Key4"]
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Key4"]
shape = SubResource( 1 )

[node name="NoteSketch" type="Sprite" parent="Key4"]
rotation = 1.5708
texture = ExtResource( 2 )

[node name="timer_1" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="timer_2" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="timer_3" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="timer_4" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="timeout" from="timer_1" to="." method="_on_timer_1_timeout"]
[connection signal="timeout" from="timer_2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="timer_3" to="." method="_on_timer_3_timeout"]
[connection signal="timeout" from="timer_4" to="." method="_on_timer_4_timeout"]
